frontend/src/Components/Sheets/Sheets.css
.box-container {
	background-color: #E8E8E8;
	width: 150px;
	margin-left: 15px;
	margin-right: 5px;
	margin-top: 20px;
	padding-bottom: 0px;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	border-radius: 15px;
	min-height: 280px;
	cursor: pointer;
}

.thumbnail-image{
	max-width: 150px;
	border-top-left-radius: 15px;
	border-top-right-radius: 15px;
}

.sheet-name-container {
	text-align: left;
	margin-left: 10px;
	margin-top: 2px;
	line-height: 100%;
	text-overflow: ellipsis;
	overflow: hidden; 
	white-space: nowrap;
}

.sheet-name {
	color: #404040;
	font-weight: 300;
	text-overflow: ellipsis;
	
}

.sheet-composer-container {
	text-align: left;
	margin-left: 10px;
	line-height: 100%;

}

.sheet-composer {
	color: grey;
	font-size: small;
	font-weight: 100;
}

.all-sheets-container {
	display: flex;
	list-style: none;
	padding-bottom: 25px;
	overflow: scroll;
}

